assets/css/app.css
/* ... */
.m-sides{
    margin-left: 1.5rem;
    margin-right: 1.5rem;
}

.active {
    border-bottom: 1px solid var(--blue-color);
}

/* Navigation */



.main-nav{
    display:flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 1rem;
    padding-bottom: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

.nav-toggles{
    display:flex;
    justify-content: space-between;
    align-items: center;
    width: 30%;    
}

.nav-logo{
    width: 10rem;
}

.nav-toggle{
    font-size: 3rem;
    z-index: 2000;
}

.nav-phone{
    font-size: 2.5rem;
}

.nav-links {
    display:flex;
    position: fixed;
    z-index: 1000;
    inset: 0 0 0 30%;
    list-style: none;    
    padding: min(20rem, 15vh) 2rem;
    margin: 0;
    flex-direction: column;
    transform: translateX(200%);
    transition: transform 300ms ease-in-out;
    background: hsl( var(--clr-white) / 0.05);
    backdrop-filter: blur(1.5rem);
}

@supports ((-webkit-backdrop-filter: blur(1.5em)) or (backdrop-filter: 1.5em)) {
    .nav-links {
      background-color: rgba(255, 255, 255, .5);
      -webkit-backdrop-filter: blur(1.5em);
      backdrop-filter: blur(1.5em);
    }
  }

.nav-visible {
    transform: translateX(50%)
}

.nav-visible > * {
    margin-top: 30px;
    font-size: 1.2rem;
    color: black;
}

.nav-phone-lg{
    display:none;
}

.nav-dropdown {
    position: relative;
}

.services-dropdown {
    display: none;
    flex-direction: column;
    position: absolute;
    top: 1.3em;
    padding: 1.5em;
    min-width: 16em;
    border-radius: 20px;
    background-color: rgba(255, 255, 255, 1);
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.4);
}

.nav-links.nav-visible .services-dropdown {
    top: 1.75em;
    left: -6em;
    font-size: .9rem;
}

.services-dropdown > a {
    margin-bottom: 1em;
}

.nav-dropdown:hover .services-dropdown {
    display: flex;
}

@media screen and (min-width:400px) {
    .nav-toggles{
        justify-content:space-evenly;
    }
}


@media screen and (min-width:1000px) {
    .nav-toggles{
        display: none;
    }

    .nav-links{
        display: flex;
        flex-direction: row;
        width: 50%;
        justify-content: space-evenly;
        font-size: 1.15rem;
        position: relative;
        inset: 0;
        padding: 0;
        transform: translateX(0); 
    }

    .nav-link{
        color:#333;
        font-weight: 700;
    }
    .nav-phone-lg{
        font-size: 1.15rem;
        border-left: 2px solid #333;
        height: 4rem;
        padding-left: 4rem;
        margin-right: 4rem;
        display: flex;
        align-items: center;
    }

    .main-nav{
        justify-content: space-around;
        align-items: center;
        margin-top: 1.2rem;
    }
    .nav-logo{
        width: 13.5rem;
    }
}

.main-content{
    /* margin-top: 1.5rem; */
    /* margin-left: 1rem;
    margin-right: 1rem; */
    text-align: center;
}

/* .hero{
    display: flex;
    flex-direction: column;
} */

.main-title{
    font-size: 2rem;
}

.accent-word1{
    color:var(--blue-color);
}

.accent-word2{
    color:var(--orange-color);
}

#intro{
    text-align: center;
}

.hero-img{
    padding-bottom: 1rem;
}

.hero-img{
    max-width: 50%;
    display: none;
}

.hero {
    color: black;
    height: 60vh;
    margin-left: 0rem;
    margin-right: 0rem;
    background: linear-gradient(0deg, rgba(51, 49, 50, 0.3), rgba(56, 53, 55, 0.3)), url(/assets/images/index-hero.webp); 
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.hero{
    display:flex;
    flex-direction: column;
    justify-content: center;
    margin-bottom: 2rem;
}

.hero-img{
    max-width: 40%;
    display: none;
}

.hero-text{
    background-color: rgba(255,255,255,0.75);
    width: 80%;
    max-width: 500px;
    margin: 2rem auto;
    border-radius: 10px;
    padding: 1rem;
    text-align: center;
}

.hero-text p{
    font-weight: 400;
    font-size: 1.15rem;
}

.hero-cta{
    margin: 0.5rem 0 2rem 0;
    display:flex;
    flex-direction: column;
    align-items: center;
}

.hero-cta-contact{
    color: black;
    background-color: rgba(255,255,255,0.8);
    padding: .85rem 4rem;
    margin: 2rem 2rem 0 2rem;
    border-radius: 15px;
    text-align: center;
    font-weight: 700;
    font-size: 1rem;
}

.hero-cta-quote{
    color: black;
    background-color: rgba(255,255,255,0.8);
    padding: .85rem 2.5rem;
    margin: 2rem 2rem 0 2rem;
    border-radius: 15px;
    text-align: center;
    font-weight: 700;
    font-size: 1rem;
}

@media screen and (min-width:600px) {
    .hero-cta-contact,
    .hero-cta-quote {
        width: 60%;
        max-width: 250px;
        margin: 1.25rem auto;
    }
}

@media screen and (min-width:1000px) {
    .hero-text{
        background-color: rgba(255,255,255,0.75);
        margin-top: 2rem;
        border-radius: 6px;
    }

    .hero {
        height: 60vh;
        margin-left: -1rem;
        margin-right: -1rem;
    }
}

.reviews{
    margin-left: 1.5rem;
    margin-right: 1.5rem;
    border: 1px solid var(--orange-color);
    color:var(--blue-color);
    padding-top: 1rem;
    padding-bottom: 1rem;
    text-align: center;
    border-radius: 25px;
}

.review-container{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 2rem auto;
    width: 70%;
    padding: 1rem 1rem 0 1rem;
    background-color: whitesmoke;
    border: 1px solid rgba(51, 49, 50, 0.3);
    text-align: center;
}

.reviews-title{
    margin-bottom: -1rem;
    color:#333;
}

.reviews-author{
    color:rgba(51, 49, 50, 0.5);
    font-size: 0.9rem;
}

.reviews-body{
    font-size:0.825rem;
    text-align:justify;
}

.reviews-btns{
    display:flex;
    justify-content: space-evenly;
}

.work-together-btn{
    color: var(--orange-color);
}

.projects-btn,
.work-together-btn{
    font-size: 0.86rem;;
}
/* ... */

